fix: remove whitespace on sides

--- a/css/Animals-page.css
+++ b/css/Animals-page.css
@@ -1,4 +1,13 @@
-.body{
+.gradient{
+    background: url("./../assets/img/noise.png"),
+    radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #131212;
+}
+
+.gray-bg{
+    background-color: #F6F6F6;
+}
+
+.wrapped{
     max-width: 1280px;
     margin: 0 auto;
 }
@@ -7,7 +16,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 40px;
+    padding: 30px 0;
+}
+
+.header img{
+    padding-left: 40px;
 }
 
 .header-nav{
@@ -15,6 +28,7 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 35px;
+    margin-right: 40px;
 }
 
 .header-nav a {
