--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,3 @@
-.footer {
-    background-image: url(./../assets/img/footer-gradient-background.png);
-}
-
 .footer_content {
     display: flex;
     justify-content: space-between;
